=================================================

(Note: Isabelle/jEdit shows a tree-view of the NEWS file in Sidekick.)


New in this Isabelle version
----------------------------

*** General ***

* Proof method "subst" is confined to the original subgoal range: its
included distinct_subgoals_tac no longer affects unrelated subgoals.
Rare INCOMPATIBILITY.


*** Isabelle/jEdit Prover IDE ***

* Action "isabelle.goto-entity" (shortcut CS+d) jumps to the definition
of the formal entity at the caret position.

* The visual feedback on caret entity focus is normally restricted to
definitions within the visible text area. The keyboard modifier "CS"
overrides this: then all defining and referencing positions are shown.
See also option "jedit_focus_modifier".

* Auto nitpick is enabled by default: it is now reasonably fast due to
Kodkod invocation within Isabelle/Scala.

* The jEdit status line includes widgets both for JVM and ML heap usage.
Ongoing ML ongoing garbage collection is shown as "ML cleanup".

* The Monitor dockable provides buttons to request a full garbage
collection and sharing of live data on the ML heap. It also includes
information about the Java Runtime system.

* PIDE support for session ROOTS: markup for directories.

* Update to jedit-5.6.0, the latest release. This version works properly
on macOS by default, without the special MacOSX plugin.


*** Document preparation ***

* Keyword 'document_theories' within ROOT specifies theories from other
sessions that should be included in the generated document source
directory. This does not affect the generated session.tex: \input{...}
needs to be used separately.

* The standard LaTeX engine is now lualatex, according to settings
variable ISABELLE_PDFLATEX. This is mostly upwards compatible with old
pdflatex, but text encoding needs to conform strictly to utf8. Rare
INCOMPATIBILITY.

* Discontinued obsolete DVI format and ISABELLE_LATEX settings variable:
document output is always PDF.
